[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/StartMenu.gd" type="Script" id=2]
[ext_resource path="res://fonts/ferrum.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/StyledButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://textures/space_art.png" type="Texture" id=5]

[node name="Control" type="Control"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" parent="." instance=ExtResource( 1 )]
margin_right = 1024.0

[node name="StartMenu" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="StartMenu"]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu/HBoxContainer"]
margin_right = 252.0
margin_bottom = 400.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="StartMenu/HBoxContainer/VBoxContainer"]
margin_right = 252.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 3 )
text = "Arctus Major"
align = 1
valign = 1

[node name="Resume" parent="StartMenu/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 59.0
margin_right = 252.0
margin_bottom = 108.0
disabled = true
text = "Resume Journey"

[node name="Load" parent="StartMenu/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 118.0
margin_right = 252.0
margin_bottom = 167.0
disabled = true
text = "Load Journey"

[node name="Start" parent="StartMenu/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 177.0
margin_right = 252.0
margin_bottom = 226.0
text = "Begin New Journey"

[node name="Options" parent="StartMenu/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 236.0
margin_right = 252.0
margin_bottom = 285.0
disabled = true
text = "Configure Parameters"

[node name="Quit" parent="StartMenu/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 295.0
margin_right = 252.0
margin_bottom = 344.0
text = "Terminate Program"

[node name="CenterContainer" type="CenterContainer" parent="StartMenu/HBoxContainer"]
editor/display_folded = true
margin_left = 256.0
margin_right = 824.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="StartMenu/HBoxContainer/CenterContainer"]
self_modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 135.0
margin_top = 33.0
margin_right = 432.0
margin_bottom = 367.0

[node name="TextureRect" type="TextureRect" parent="StartMenu/HBoxContainer/CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 290.0
margin_bottom = 327.0
texture = ExtResource( 5 )
[connection signal="pressed" from="StartMenu/HBoxContainer/VBoxContainer/Resume" to="StartMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="StartMenu/HBoxContainer/VBoxContainer/Load" to="StartMenu" method="_on_Load_pressed"]
[connection signal="pressed" from="StartMenu/HBoxContainer/VBoxContainer/Start" to="StartMenu" method="_on_Start_pressed"]
[connection signal="pressed" from="StartMenu/HBoxContainer/VBoxContainer/Quit" to="StartMenu" method="_on_Quit_pressed"]
